@@ -1,10 +1,13 @@
 Function: localprec
 Section: programming/specific
 C-Name: localprec
-Prototype: vG
-Help: localprec(p): set the real precision to p in the dynamic scope.
-Doc: set the real precision to $p$ in the dynamic scope. All computations
- are performed as if \tet{realprecision} was $p$:
+Prototype: lDG
+Help: localprec({p}): set the real precision to p in the dynamic scope
+ and return p. If p is omitted, return current real precision.
+Doc: set the real precision to $p$ in the dynamic scope and return $p$.
+ (If $p$ is omitted, return the current dynamic precision.)
+
+ All computations are performed as if \tet{realprecision} was $p$:
  transcendental constants (e.g.~\kbd{Pi}) and
  conversions from exact to floating point inexact data use $p$ decimal
  digits, as well as iterative routines implicitly using a floating point
