@@ -3142,8 +3142,8 @@ long    gp_evalbool(void *E, GEN x);
 GEN     gp_evalprec(void *E, GEN x, long prec);
 GEN     gp_evalupto(void *E, GEN x);
 long    gp_evalvoid(void *E, GEN x);
-void    localprec(GEN p);
-void    localbitprec(GEN p);
+long    localprec(GEN p);
+long    localbitprec(GEN p);
 long    loop_break(void);
 GEN     next0(long n);
 GEN     pareval(GEN C);
