@@ -11,8 +11,8 @@ bitprecision(1 + O(3^5), 10)
 bitprecision(1, 10)
 precision(1./t)
 precision(Qfb(1,0,-2));
-localprec(37.5); precision(1.)
-localbitprec(127/2); bitprecision(1.)
+localprec(37.5)
+localbitprec(127/2)
 precision(precision(1.,37.5))
 bitprecision(bitprecision(1.,127/2))
 
