@@ -105,7 +105,8 @@ BA  18- qfbsolve now returns a vector of solutions.
         cyclotomic polynomials defining the field of values of CHI
     22- inline / unline are now obsolete, use export/unexport
     23- let localprec(p) accept non integral real p [replace by ceil(p)];
-        same for localbitprec.
+        and return the actual accuracy used. The argument can be omitted
+        [return current precision]. Same for localbitprec.
     24- let precision(x,p) accept non integral real p [replace by ceil(p)];
         same for bitprecision.
 
